--- a/jsconfig.json
+++ b/jsconfig.json
@@ -25,7 +25,10 @@
       ],
       "vue$": [
         "node_modules/vue/dist/vue.esm.js"
-      ]
+      ],
+      "stores/*": [
+        "src/stores/*"
+      ],
     }
   },
   "exclude": [
