--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
+    "@vue/composition-api": "^1.4.9",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "katex": "^0.15.3",
     "mermaid": "^8.14.0",
+    "pinia": "^2.0.12",
     "quasar": "^1.0.0",
     "quasar-tiptap": "^1.9.1",
     "tiptap": "^1.32.2",
@@ -29,7 +31,8 @@
     "eslint": "^7.21.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-vue": "^7.7.0",
-    "eslint-webpack-plugin": "^2.4.0"
+    "eslint-webpack-plugin": "^2.4.0",
+    "quasar-app-extension-theme-manager": "^0.3.1"
   },
   "browserslist": [
     "ie >= 11",
